[package]
name = "surl"
version = "0.1.0"
authors = ["xiaoguang zhang <xiaoguang@tubi.tv>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
hyper = "0.13.0-alpha.4"
tokio= "0.2.0-alpha.6"
futures-util-preview="0.3.0-alpha.19"
daemonize = "0.4.1"